Dodate add, edit, read, delete funkcionalnosti

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,9 @@
   text-align: center;
 }
 
-body{
+body {
   background-image: linear-gradient(to right, #0f0c29, #302b63, #24243e);
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
