--- a/src/styles/TodoList.css
+++ b/src/styles/TodoList.css
@@ -1,20 +1,25 @@
 .TodoList {
     width: 30%;
-    border: 2px solid #000;
+    border: 1.5px solid #000;
     padding: 15px;
-    margin-top: 5%;
+    margin: 2.5% 0 1.5% 0;
     border-radius: 5px;
     background-color: #fff;
+    max-height: 55vh;
+    overflow-y: auto;
+}
+
+.TodoList.hidden {
+    display: none;
 }
 
 .icons {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
 }
 
 .icons span {
     cursor: pointer;
     color: black;
 }
-
