--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 }
 
 body {
-  background-image: linear-gradient(to right, #0f0c29, #302b63, #24243e);
+  background-image: linear-gradient(to left, #2c3e50, #4ca1af);
   box-sizing: border-box;
   margin: 0;
   padding: 0;
