--- a/src/styles/TodoCard.css
+++ b/src/styles/TodoCard.css
@@ -3,11 +3,19 @@
     justify-content: space-between;
     align-items: center;
     padding: 10px;
-    border: 1px solid #ddd;
+    border: 1.5px solid #000;
     border-radius: 4px;
     margin-bottom: 10px;
-    background-image: radial-gradient( circle farthest-corner at 22.4% 21.7%, rgba(4,189,228,1) 0%, rgba(2,83,185,1) 100.2% );
-    color: black;
+    color: #000;
+}
+
+.TodoCard.incomplited{
+    background-image: linear-gradient(to left, #b6fbff, #598edf);
+}
+
+.TodoCard.completed{
+    text-decoration: line-through;
+    background-color: #467ac9;
 }
 
 .TodoCard p {
@@ -15,13 +23,11 @@
     flex: 1;
 }
 
-.TodoCard div {
-    display: flex;
-    gap: 10px
+.TodoCard p:hover{
+    cursor: pointer;
 }
 
-.TodoCard button {
-    background: none;
-    border: none;
-    cursor: pointer;
+.TodoCard div {
+    display: flex;
+    gap: 12px;
 }
