--- a/src/styles/TodoList.css
+++ b/src/styles/TodoList.css
@@ -2,10 +2,10 @@
     width: 30%;
     border: 1.5px solid #000;
     padding: 15px;
-    margin: 2.5% 0 1.5% 0;
+    margin: 2% 0 1.5% 0;
     border-radius: 5px;
-    background-color: #fff;
-    max-height: 55vh;
+    background-color: #3f2b96;
+    max-height: 60vh;
     overflow-y: auto;
 }
 
