Dodata share funkcionalnost

--- a/src/styles/TodoList.css
+++ b/src/styles/TodoList.css
@@ -4,7 +4,7 @@
     padding: 15px;
     margin: 2% 0 1.5% 0;
     border-radius: 5px;
-    background-color: #3f2b96;
+    background-color: #4d36b3;
     max-height: 60vh;
     overflow-y: auto;
 }
