--- a/src/styles/TodoList.css
+++ b/src/styles/TodoList.css
@@ -1,8 +1,8 @@
 .TodoList {
-    width: 30%;
+    width: 50vw;
     border: 1.5px solid #000;
     padding: 15px;
-    margin: 2% 0 1.5% 0;
+    margin: 6vh 0 4vh 0;
     border-radius: 5px;
     background-color: #4d36b3;
     max-height: 60vh;
