--- a/src/styles/TodoCard.css
+++ b/src/styles/TodoCard.css
@@ -2,11 +2,12 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px;
+    padding: 8px;
     border: 1.5px solid #000;
     border-radius: 4px;
-    margin-bottom: 10px;
+    margin: 7px auto;
     color: #000;
+    width: 80%;
 }
 
 .TodoCard.incomplited{
@@ -30,4 +31,25 @@
 .TodoCard div {
     display: flex;
     gap: 12px;
+}
+
+@media screen and (max-width: 850px) {
+    .TodoCard{
+        padding: 5px;
+    }
+    .TodoCard div{
+        gap: 10px;
+    }
+}
+
+@media screen and (max-width: 650px) {
+    .TodoCard div{
+        gap: 5px;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .TodoCard div{
+        gap: 2px;
+    }
 }
