--- a/src/styles/TodoForm.css
+++ b/src/styles/TodoForm.css
@@ -31,3 +31,9 @@
     color: #000;
 }
 
+@media screen and (min-width: 820px) {
+    .TodoList {
+        background-color: yellow;
+        height: 52vh;
+    }
+}
