--- a/src/styles/TodoList.css
+++ b/src/styles/TodoList.css
@@ -1,11 +1,13 @@
 .TodoList {
-    width: 50vw;
+    width: 50%;
+    max-width: 450px;
     border: 1.5px solid #000;
     padding: 15px;
-    margin: 6vh 0 4vh 0;
+    margin: 1.5vh 0 0 0;
     border-radius: 5px;
     background-color: #4d36b3;
-    max-height: 60vh;
+    height: 64%;
+    max-height: 80%;
     overflow-y: auto;
 }
 
@@ -16,7 +18,6 @@
 .icons {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 15px;
 }
 
 .icons span {
