--- a/src/styles/TodoFooter.css
+++ b/src/styles/TodoFooter.css
@@ -5,5 +5,14 @@
     padding: 10px 0px;
     border-top: 1px solid #fff;
     text-align: center;
-    letter-spacing: 1px;
+    letter-spacing: 0.5px;
+    font-size: x-large;
+}
+
+.TodoFooter img{
+    width: 24px;
+    height: 24px;
+    margin: 0px 0px -5px 7px;
+    border-radius: 50px;
+    object-fit: cover;
 }
