--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
 body {
   background-image: linear-gradient(to left, #2c3e50, #4ca1af);
   box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
   margin: 0;
   padding: 0;
 }
