--- a/src/styles/TodoList.css
+++ b/src/styles/TodoList.css
@@ -3,10 +3,10 @@
     max-width: 550px;
     border: 1.5px solid #000;
     padding: 15px;
-    margin: 1.5vh 0 0 0;
+    margin: 1vh 0 0 0;
     border-radius: 5px;
     background-color: #4d36b3;
-    height: 60%;
+    max-height: 55vh;
     overflow-y: auto;
 }
 
