--- a/src/styles/TodoForm.css
+++ b/src/styles/TodoForm.css
@@ -2,7 +2,7 @@
     position: relative;
     width: 100%;
     max-width: 400px;
-    margin: 0 auto;
+    margin: 0 auto 3vh auto;
 }
 
 .todo-input {
@@ -29,4 +29,11 @@
     margin: 0;
     font-size: 20px;
     color: #000;
+}
+
+@media screen and (max-width: 800px) {
+    .todo-input{
+        padding: 8px 32px 8px 8px;
+        font-size: 12px;
+    }
 }
