--- a/src/styles/TodoList.css
+++ b/src/styles/TodoList.css
@@ -1,13 +1,14 @@
 .TodoList {
-    width: 50%;
-    max-width: 550px;
+    width: 65%;
+    max-width: 750px;
     border: 1.5px solid #000;
     padding: 15px;
-    margin: 1vh 0 0 0;
     border-radius: 5px;
     background-color: #4d36b3;
-    max-height: 55vh;
     overflow-y: auto;
+    max-height: calc(100vh - 240px);
+    scrollbar-width: thin;
+    scrollbar-color: #888 #f1f1f1;
 }
 
 .TodoList.hidden {
