--- a/src/styles/TodoList.css
+++ b/src/styles/TodoList.css
@@ -6,7 +6,7 @@
     border-radius: 5px;
     background-color: #4d36b3;
     overflow-y: auto;
-    max-height: calc(100vh - 240px);
+    max-height: 57vh;
     scrollbar-width: thin;
     scrollbar-color: #888 #f1f1f1;
 }
