--- a/app/src/components/TodoList/TodoList.css
+++ b/app/src/components/TodoList/TodoList.css
@@ -1,10 +1,10 @@
 .TodoList {
     width: 65%;
     max-width: 750px;
-    border: 1.5px solid #000;
+    border: 1.5px solid #ccc;
     padding: 15px;
-    border-radius: 5px;
-    background-color: #4d36b3;
+    border-radius: 10px;
+    background-color: rgba(255, 255, 255, 0.1);
     overflow-y: auto;
     min-height: fit-content;
     max-height: 57vh;
@@ -13,39 +13,76 @@
     display: flex;
     flex-direction: column;
     white-space: pre-wrap;
-}
-
-.TodoList.hidden {
-    display: none;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .icons {
     display: flex;
     justify-content: space-between;
+    margin-bottom: 10px;
 }
 
 .icons span,
 .filter-options span {
     cursor: pointer;
-    color: black;
+    color: #fff;
+    border: 1.5px solid #ccc;
     padding: 5px 10px;
     border-radius: 5px;
-    background-color: transparent;
+    background-color: rgba(255, 255, 255, 0.2);
     transition: background-color 0.3s ease;
+}
+
+.icons span:hover,
+.filter-options span:hover {
+    background-color: rgba(255, 255, 255, 0.4);
+}
+
+.filter-options {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+    margin: 10px;
 }
 
 .filter-options select {
     appearance: none;
     background: none;
-    border: none;
+    border: 1.5px solid #ccc;
+    border-radius: 5px;
     cursor: pointer;
-    color: black;
+    color: #fff;
     padding: 5px 10px;
     font-size: medium;
+    text-align: center;
+    background-color: rgba(255, 255, 255, 0.1);
+    transition: background-color 0.3s ease;
+}
+
+.filter-options option{
+    background-color: #2c3e50;
+}
+
+.filter-options select:hover {
+    background-color: rgba(255, 255, 255, 0.3);
 }
 
 @media screen and (max-width: 850px) {
     .TodoList {
         width: 88%;
+        padding: 10px;
+    }
+}
+
+@media screen and (max-width: 450px) {
+    .filter-options{
+        margin: 10px 5px;
+        font-size: small;
+    }
+    .filter-options select{
+        padding: 5px;
+        width: fit-content;
+        font-size: small;
     }
 }
