--- a/app/src/components/TodoList/TodoList.css
+++ b/app/src/components/TodoList/TodoList.css
@@ -16,6 +16,10 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
+.hidden{
+    display: none;
+}
+
 .icons {
     display: flex;
     justify-content: space-between;
