--- a/app/src/components/TodoFooter/TodoFooter.css
+++ b/app/src/components/TodoFooter/TodoFooter.css
@@ -38,3 +38,15 @@
         height: 20px;
     }
 }
+
+@media (prefers-color-scheme: dark) {
+    .TodoFooter {
+        border-top: 1px solid #fff;
+        color: #cccccc;
+        background-color: #222;
+    }
+
+    .TodoFooter img {
+        border: 1px solid #666;
+    }
+}
