--- a/app/src/App.css
+++ b/app/src/App.css
@@ -10,3 +10,9 @@ body {
   padding: 0;
   overflow: hidden;
 }
+
+@media (prefers-color-scheme: dark) {
+  body {
+    background-image: linear-gradient(to left, #1a1a1a, #333333b2);
+  }
+}
