--- a/app/src/components/TodoEdit/TodoEdit.css
+++ b/app/src/components/TodoEdit/TodoEdit.css
@@ -15,7 +15,7 @@
     color: #000;
 }
 
-.todo-edit::placeholder{
+.todo-edit::placeholder {
     padding-left: 0.5vw;
     font-style: italic;
 }
@@ -31,4 +31,20 @@
     margin: 0;
     font-size: 20px;
     color: #000;
+}
+
+@media (prefers-color-scheme: dark) {
+    .todo-edit {
+        border: 1.5px solid #555;
+        background-image: linear-gradient(to left, #444, #555);
+        color: #f5f5f5;
+    }
+
+    .todo-edit::placeholder {
+        color: #aaa;
+    }
+
+    .todo-btn-edit {
+        color: #f5f5f5;
+    }
 }
