--- a/app/src/components/TodoList/TodoList.css
+++ b/app/src/components/TodoList/TodoList.css
@@ -16,7 +16,7 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-.hidden{
+.hidden {
     display: none;
 }
 
@@ -64,12 +64,42 @@
     transition: background-color 0.3s ease;
 }
 
-.filter-options option{
+.filter-options option {
     background-color: #2c3e50;
 }
 
 .filter-options select:hover {
     background-color: rgba(255, 255, 255, 0.3);
+}
+
+@media (prefers-color-scheme: dark) {
+    .TodoList {
+        border: 1.5px solid #fff;
+        background-color: #1a1a1a;
+        scrollbar-color: #555 #222;
+        box-shadow: 0 0px 8px rgba(255, 255, 255, 0.7);
+    }
+
+    .icons span,
+    .filter-options span {
+        color: #e0e0e0;
+        background-color: rgba(255, 255, 255, 0.1);
+    }
+
+    .icons span:hover,
+    .filter-options span:hover {
+        background-color: rgba(255, 255, 255, 0.3);
+    }
+
+    .filter-options select {
+        border: 1.5px solid #fff;
+        color: #e0e0e0;
+        background-color: rgba(255, 255, 255, 0.1);
+    }
+
+    .filter-options select:hover {
+        background-color: rgba(255, 255, 255, 0.3);
+    }
 }
 
 @media screen and (max-width: 850px) {
@@ -80,11 +110,11 @@
 }
 
 @media screen and (max-width: 450px) {
-    .filter-options{
+    .filter-options {
         margin: 10px 5px;
         font-size: small;
     }
-    .filter-options select{
+    .filter-options select {
         padding: 5px;
         width: fit-content;
         font-size: small;
