--- a/app/src/components/TodoForm/TodoForm.css
+++ b/app/src/components/TodoForm/TodoForm.css
@@ -15,18 +15,22 @@
 
 .todo-icon{
     cursor: pointer;
+    color: #fff;
 }
 
 .todo-input {
     width: 75%;
     padding: 15px 10px 15px 45px;
     border: 1.5px solid #ccc;
+    background-color: rgba(255, 255, 255, 0.1);
+    color: #fff;
     border-radius: 10px;
     font-size: 15px;
 }
 
 .todo-input::placeholder {
     padding-left: 0.5vw;
+    color: #fff;
     font-style: italic;
 }
 
@@ -34,7 +38,9 @@
     position: absolute;
     right: 30px;
     top: 10%;
-    border: 1.5px solid #000;
+    border: 1.5px solid #fff;
+    background-color: rgba(255, 255, 255, 0.1);
+    color: #fff;
     border-radius: 10px;
     padding: 10px;
     font-size: 15px;
@@ -42,10 +48,11 @@
 
 .todo-dropdown option {
     background-color: #2c3e50;
+    color: #fff;
 }
 
 .todo-dropdown:hover{
-    background-color: rgba(255, 255, 255, 0.3);
+    background-color: #e0e0e07a;
     cursor: pointer;
 }
 
@@ -83,27 +90,5 @@
 }
 
 @media (prefers-color-scheme: dark) {
-    .todo-icon {
-        color: #e0e0e0;
-    }
-
-    .todo-input {
-        border: 1.5px solid #fff;
-        background-color: #222;
-        color: #e0e0e0;
-    }
-
-    .todo-input::placeholder {
-        color: #fff;
-    }
-
-    .todo-dropdown {
-        border: 1.5px solid #fff;
-        background-color: #222;
-        color: #e0e0e0;
-    }
-
-    .todo-btn {
-        color: #e0e0e0;
-    }
+    
 }
