--- a/app/src/components/TodoList/TodoList.css
+++ b/app/src/components/TodoList/TodoList.css
@@ -1,10 +1,14 @@
+:root{
+    --list-bc: rgba(255, 255, 255, 0.1);
+}
+
 .TodoList {
     width: 65%;
     max-width: 750px;
     border: 1.5px solid #ccc;
     padding: 15px;
     border-radius: 10px;
-    background-color: rgba(255, 255, 255, 0.1);
+    background-color: var(--list-bc);
     overflow-y: auto;
     min-height: fit-content;
     max-height: 57vh;
@@ -60,7 +64,7 @@
     padding: 5px 10px;
     font-size: medium;
     text-align: center;
-    background-color: rgba(255, 255, 255, 0.1);
+    background-color: var(--list-bc);
     transition: background-color 0.3s ease;
 }
 
