Promjenjena logika za handlanje no category inputa

--- a/app/src/components/TodoInput/TodoInput.css
+++ b/app/src/components/TodoInput/TodoInput.css
@@ -1,4 +1,4 @@
-:root{
+:root {
     --icon-color: #f5f5f5;
     --input-bc: rgba(255, 255, 255, 0.1);
 }
@@ -53,8 +53,23 @@
     font-size: 15px;
 }
 
+@keyframes shake {
+    0%, 100% { transform: translateX(0); }
+    25% { transform: translateX(-5px); }
+    50% { transform: translateX(5px); }
+    75% { transform: translateX(-5px); }
+}
+  
+.shake {
+    animation: shake 0.5s;
+}
+  
+.error {
+    border-color: red;
+}
+
 @media (prefers-color-scheme: dark) {
-    .todo-icon{
+    .todo-icon {
         color: var(--dark-icon-color);
     }
 }
@@ -70,7 +85,7 @@
         padding-left: 5.5vw;
     }
 
-    .todo-icon{
+    .todo-icon {
         left: 12px;
     }
 
@@ -82,7 +97,7 @@
 }
 
 @media screen and (max-width: 450px) {
-    .todo-input{
+    .todo-input {
         width: 85%;
     }
 
@@ -90,11 +105,11 @@
         padding-left: 7.5vw;
     }
 
-    .todo-icon{
+    .todo-icon {
         left: 7px;
     }
 
-    .todo-dropdown{
+    .todo-dropdown {
         right: 10px;
     }
 }
