--- a/app/src/components/TodoFooter/TodoFooter.css
+++ b/app/src/components/TodoFooter/TodoFooter.css
@@ -4,6 +4,7 @@
     width: 100%;
     padding: 10px 0px;
     border-top: 1px solid #fff;
+    background-color: #3a526b;
     text-align: center;
     letter-spacing: 0.5px;
     font-size: x-large;
@@ -15,6 +16,12 @@
     margin: 0px 0px -5px 7px;
     border-radius: 50px;
     object-fit: cover;
+}
+
+@media (prefers-color-scheme: dark) {
+    .TodoFooter {
+        background-color: #141c24;
+    }
 }
 
 @media screen and (max-width: 800px) {
@@ -36,11 +43,5 @@
     .TodoFooter img {
         width: 20px;
         height: 20px;
-    }
-}
-
-@media (prefers-color-scheme: dark) {
-    .TodoFooter {
-        background-color: #141c24;
     }
 }
